Moved some styling & page structuring from the full-viewport page layout to the default page layout. Fixed full-viewport layout so descendants of main items are able to fill these main items without having to keep site spacing into account.

--- a/client/assets/stylesheets/scss/theme/pages/layouts/_base.scss
+++ b/client/assets/stylesheets/scss/theme/pages/layouts/_base.scss
@@ -21,4 +21,26 @@
       padding-top: $site__header-height;
     }
   }
+
+  &::after { // footer placeholder
+    @include stretch(bottom);
+
+    background-color: $color--contrast;
+    content: '';
+    display: block;
+  }
+
+  .l_main {
+    @include inkgrid-row($spacing--site__v, $spacing--site__h, false);
+
+    &__item {
+      @include inkgrid-col($spacing--site__v, $spacing--site__h);
+      @include inkgrid-col__parts(1);
+
+      &__wrapper {
+        @include padding($spacing--base__v, $spacing--base__h);
+        @include color--emphasis;
+      }
+    }
+  }
 }
